Add comprehensive test generation and advanced testing capabilities
This commit adds several major enhancements to the UniAuto MCP Server:

1. Test Generation:
   - Multi-framework test code generation (Playwright, Cypress, Jest, etc.)
   - Support for different test styles (BDD, TDD) and output formats
   - Application structure analysis for intelligent test creation
   - Project scaffolding with configurations

2. Advanced Testing:
   - Visual comparison testing with baseline management
   - Accessibility testing with WCAG compliance checking
   - Performance testing with Core Web Vitals metrics
   - Network tracing and API monitoring
   - Comprehensive test suite execution

3. AI Integration:
   - Enhanced Claude 3.7 integration for test generation
   - Complete MCP protocol support for AI assistants
   - Detailed integration guides for VSCode, Cursor, and other platforms

4. Documentation:
   - Complete tutorial and guides
   - API documentation
   - Example scripts and demos

All features built on Playwright's capabilities without requiring additional dependencies.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Environment Variables for UniAuto MCP Server
+
 # Server Configuration
 PORT=3000
 NODE_ENV=development
@@ -8,15 +10,22 @@ MONGODB_URI=mongodb://localhost:27017/uniauto
 # Logging
 LOG_LEVEL=info
 LOG_DIR=logs
+LOG_FILE=logs/server.log
 
 # AI Configuration
 
 # Claude API
 CLAUDE_API_KEY=your_claude_api_key
-CLAUDE_API_ENDPOINT=https://api.anthropic.com/v1/messages
-CLAUDE_MODEL=claude-3-opus-20240229
+CLAUDE_MODEL=claude-3-7-sonnet-20240229
 
-# Generic AI API (OpenAI compatible)
+# Generic AI API (OpenAI compatible - if needed)
 AI_API_KEY=your_openai_api_key
 AI_API_ENDPOINT=https://api.openai.com/v1/chat/completions
 AI_MODEL=gpt-4
+
+# Playwright configuration
+BROWSER=chromium
+HEADLESS=true
+
+# Test generation settings
+TEST_OUTPUT_DIR=./generated-tests
