--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
+    "start:mcp": "cross-env MCP_ENABLED=true LOG_TO_STDERR=true node src/index.js --mcp-server",
     "dev": "nodemon src/index.js",
     "lint": "eslint src",
     "test": "jest",
@@ -37,6 +38,7 @@
     "ws": "^8.14.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.49.0",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1"
